tests/rosetta/out/Smalltalk/call-an-object-method-2.out
Object: Array new: 2 "<0x7f668082e250>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-2.st:18)
