tests/rosetta/out/Smalltalk/call-an-object-method-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| newFactory sn New b Count funcs |
newFactory := [ sn := 0.
New := [ sn := (sn + 1).
b := Dictionary from:{'secret'->sn}.
((sn = 1)) ifTrue: [
b at: 'Contents' put: 'rabbit'.
] ifFalse: [
((sn = 2)) ifTrue: [
b at: 'Contents' put: 'rock'.
] .
].
b. ].
Count := [ sn. ].
{New. Count}. ].
funcs := newFactory value.
New := funcs at: 0.
Count := funcs at: 1.
